Fixed table spacing

--- a/static/base.css
+++ b/static/base.css
@@ -150,8 +150,8 @@ img {
 table {
     margin-top: 2vh;
     margin-bottom: 2vh;
-    margin-left: 2vh;
-    margin-right: 2vh;
+    /* margin-left: 2vh; */
+    /* margin-right: 2vh; */
     display: block;
     overflow-x: auto;
     overflow-y: hidden;
